--- a/nucleo-f746-144-akashi02-talkthrough/nucleo-f746-144-akashi02-talkthrough.ioc
+++ b/nucleo-f746-144-akashi02-talkthrough/nucleo-f746-144-akashi02-talkthrough.ioc
@@ -78,38 +78,40 @@ Mcu.Pin12=PA7
 Mcu.Pin13=PC4
 Mcu.Pin14=PC5
 Mcu.Pin15=PB0
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PD8
-Mcu.Pin19=PD9
+Mcu.Pin16=PB11
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PD8
 Mcu.Pin2=PE5
-Mcu.Pin20=PG6
-Mcu.Pin21=PG7
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PG11
+Mcu.Pin20=PD9
+Mcu.Pin21=PG6
+Mcu.Pin22=PG7
+Mcu.Pin23=PA8
+Mcu.Pin24=PA9
+Mcu.Pin25=PA10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
 Mcu.Pin3=PE6
-Mcu.Pin30=PG13
-Mcu.Pin31=PB3
-Mcu.Pin32=PB7
-Mcu.Pin33=PB8
-Mcu.Pin34=PB9
-Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin36=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-Mcu.Pin37=VP_SAI1_VP_$IpInstance_SAIB_SAI_BASIC
-Mcu.Pin38=VP_SYS_VS_tim14
+Mcu.Pin30=PG11
+Mcu.Pin31=PG13
+Mcu.Pin32=PB3
+Mcu.Pin33=PB7
+Mcu.Pin34=PB8
+Mcu.Pin35=PB9
+Mcu.Pin36=PE0
+Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin38=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
+Mcu.Pin39=VP_SAI1_VP_$IpInstance_SAIB_SAI_BASIC
 Mcu.Pin4=PC13
+Mcu.Pin40=VP_SYS_VS_tim14
 Mcu.Pin5=PC14/OSC32_IN
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PH0/OSC_IN
 Mcu.Pin8=PH1/OSC_OUT
 Mcu.Pin9=PC1
-Mcu.PinsNb=39
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
@@ -183,6 +185,10 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=ST1
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
@@ -244,6 +250,10 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=ST0
+PE0.Locked=true
+PE0.Signal=GPIO_Output
 PE3.Mode=SAI_B_SyncSlave
 PE3.Signal=SAI1_SD_B
 PE4.Mode=SAI_A_AsyncSlave
@@ -389,7 +399,7 @@ RCC.WatchDogFreq_Value=32000
 SAI1.AudioMode-SAI_B_SyncSlave=SAI_MODESLAVE_TX
 SAI1.BasicDataSize-SAI_A_AsyncSlave=SAI_PROTOCOL_DATASIZE_32BIT
 SAI1.BasicDataSize-SAI_B_SyncSlave=SAI_PROTOCOL_DATASIZE_32BIT
-SAI1.IPParameters=Instance-SAI_A_AsyncSlave,VirtualMode-SAI_A_AsyncSlave,Instance-SAI_B_SyncSlave,VirtualMode-SAI_B_SyncSlave,InitProtocol-SAI_B_SyncSlave,VirtualProtocol-SAI_B_BASIC,InitProtocol-SAI_A_AsyncSlave,VirtualProtocol-SAI_A_BASIC,AudioMode-SAI_B_SyncSlave,BasicDataSize-SAI_B_SyncSlave,BasicDataSize-SAI_A_AsyncSlave
+SAI1.IPParameters=VirtualProtocol-SAI_A_BASIC,VirtualProtocol-SAI_B_BASIC,Instance-SAI_A_AsyncSlave,VirtualMode-SAI_A_AsyncSlave,InitProtocol-SAI_A_AsyncSlave,Instance-SAI_B_SyncSlave,VirtualMode-SAI_B_SyncSlave,InitProtocol-SAI_B_SyncSlave,BasicDataSize-SAI_A_AsyncSlave,BasicDataSize-SAI_B_SyncSlave,AudioMode-SAI_B_SyncSlave
 SAI1.InitProtocol-SAI_A_AsyncSlave=Enable
 SAI1.InitProtocol-SAI_B_SyncSlave=Enable
 SAI1.Instance-SAI_A_AsyncSlave=SAI$Index_Block_A
