--- a/nucleo-h743-144-akashi02-talkthrough/nucleo-h743-144-akashi02-talkthrough.ioc
+++ b/nucleo-h743-144-akashi02-talkthrough/nucleo-h743-144-akashi02-talkthrough.ioc
@@ -102,26 +102,28 @@ Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PD8
-Mcu.Pin11=PD9
-Mcu.Pin12=PG6
-Mcu.Pin13=PG7
-Mcu.Pin14=PB6
+Mcu.Pin10=PB14
+Mcu.Pin11=PD8
+Mcu.Pin12=PD9
+Mcu.Pin13=PG6
+Mcu.Pin14=PG7
 Mcu.Pin15=PB7
-Mcu.Pin16=PB9
-Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin18=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-Mcu.Pin19=VP_SAI1_VP_$IpInstance_SAIB_SAI_BASIC
+Mcu.Pin16=PB8
+Mcu.Pin17=PB9
+Mcu.Pin18=PE0
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin2=PE5
-Mcu.Pin20=VP_SYS_VS_tim17
+Mcu.Pin20=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
+Mcu.Pin21=VP_SAI1_VP_$IpInstance_SAIB_SAI_BASIC
+Mcu.Pin22=VP_SYS_VS_tim17
 Mcu.Pin3=PE6
 Mcu.Pin4=PC13
 Mcu.Pin5=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin7=PH0-OSC_IN (PH0)
 Mcu.Pin8=PH1-OSC_OUT (PH1)
-Mcu.Pin9=PB14
-Mcu.PinsNb=21
+Mcu.Pin9=PB11
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -149,16 +151,21 @@ NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=ST1
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_Label
@@ -189,6 +196,10 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=ST0
+PE0.Locked=true
+PE0.Signal=GPIO_Output
 PE3.Mode=SAI_B_SyncSlave
 PE3.Signal=SAI1_SD_B
 PE4.Mode=SAI_A_AsyncSlave
@@ -239,7 +250,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,2-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
