Confrimed F722 IS2 project working.

--- a/nucleo-f722-akashi02-i2s/nucleo-f722-akashi02-i2s.ioc
+++ b/nucleo-f722-akashi02-i2s/nucleo-f722-akashi02-i2s.ioc
@@ -6,29 +6,29 @@ CORTEX_M7.IPParameters=ART_ACCLERATOR_ENABLE,PREFETCH_ENABLE,CPU_ICache,CPU_DCac
 CORTEX_M7.PREFETCH_ENABLE=1
 Dma.Request0=USART3_RX
 Dma.Request1=USART3_TX
-Dma.Request2=SAI1_A
-Dma.Request3=SAI1_B
+Dma.Request2=SPI1_TX
+Dma.Request3=SPI2_RX
 Dma.RequestsNb=4
-Dma.SAI1_A.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SAI1_A.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SAI1_A.2.Instance=DMA2_Stream1
-Dma.SAI1_A.2.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SAI1_A.2.MemInc=DMA_MINC_ENABLE
-Dma.SAI1_A.2.Mode=DMA_CIRCULAR
-Dma.SAI1_A.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SAI1_A.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SAI1_A.2.Priority=DMA_PRIORITY_LOW
-Dma.SAI1_A.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SAI1_B.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SAI1_B.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SAI1_B.3.Instance=DMA2_Stream4
-Dma.SAI1_B.3.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SAI1_B.3.MemInc=DMA_MINC_ENABLE
-Dma.SAI1_B.3.Mode=DMA_CIRCULAR
-Dma.SAI1_B.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SAI1_B.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SAI1_B.3.Priority=DMA_PRIORITY_LOW
-Dma.SAI1_B.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.2.Instance=DMA2_Stream3
+Dma.SPI1_TX.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.2.Mode=DMA_CIRCULAR
+Dma.SPI1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI1_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI2_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.3.Instance=DMA1_Stream3
+Dma.SPI2_RX.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.3.Mode=DMA_CIRCULAR
+Dma.SPI2_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART3_RX.0.Instance=DMA1_Stream1
@@ -41,7 +41,7 @@ Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_TX.1.Instance=DMA1_Stream3
+Dma.USART3_TX.1.Instance=DMA1_Stream4
 Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.USART3_TX.1.Mode=DMA_NORMAL
@@ -56,63 +56,76 @@ FREERTOS.configTOTAL_HEAP_SIZE=32768
 File.Version=6
 I2C1.IPParameters=Timing
 I2C1.Timing=0x20404768
-KeepUserPlacement=false
+I2S1.AudioFreq=I2S_AUDIOFREQ_48K
+I2S1.DataFormat=I2S_DATAFORMAT_32B
+I2S1.ErrorAudioFreq=-0.79 %
+I2S1.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S1.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,AudioFreq,DataFormat
+I2S1.Instance=SPI$Index
+I2S1.RealAudioFreq=47.619 KHz
+I2S1.VirtualMode=I2S_MODE_SLAVE
+I2S2.AudioFreq=I2S_AUDIOFREQ_48K
+I2S2.DataFormat=I2S_DATAFORMAT_32B
+I2S2.ErrorAudioFreq=-0.79 %
+I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,AudioFreq,Mode,DataFormat
+I2S2.Instance=SPI$Index
+I2S2.Mode=I2S_MODE_SLAVE_RX
+I2S2.RealAudioFreq=47.619 KHz
+I2S2.VirtualMode=I2S_MODE_SLAVE
+KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SAI1
-Mcu.IP7=SYS
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP4=I2S1
+Mcu.IP5=I2S2
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F722Z(C-E)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PE3
-Mcu.Pin1=PE4
-Mcu.Pin10=PB11
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PB13
 Mcu.Pin11=PB14
-Mcu.Pin12=PD8
-Mcu.Pin13=PD9
-Mcu.Pin14=PG6
-Mcu.Pin15=PG7
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
-Mcu.Pin2=PE5
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PB3
-Mcu.Pin24=PB7
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=PE0
-Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin29=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-Mcu.Pin3=PE6
-Mcu.Pin30=VP_SAI1_VP_$IpInstance_SAIB_SAI_BASIC
-Mcu.Pin31=VP_SYS_VS_tim14
-Mcu.Pin4=PC13
-Mcu.Pin5=PC14-OSC32_IN
-Mcu.Pin6=PC15-OSC32_OUT
-Mcu.Pin7=PH0-OSC_IN
-Mcu.Pin8=PH1-OSC_OUT
-Mcu.Pin9=PB0
-Mcu.PinsNb=32
+Mcu.Pin12=PB15
+Mcu.Pin13=PD8
+Mcu.Pin14=PD9
+Mcu.Pin15=PG6
+Mcu.Pin16=PG7
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB3
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB4
+Mcu.Pin21=PB7
+Mcu.Pin22=PB8
+Mcu.Pin23=PB9
+Mcu.Pin24=PE0
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin26=VP_SYS_VS_tim14
+Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB11
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
-MxCube.Version=5.4.0
-MxDb.Version=DB.5.0.40
+MxCube.Version=5.6.0
+MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA2_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true
+NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
@@ -122,7 +135,8 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SAI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.SPI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.SPI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -130,18 +144,6 @@ NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
 NVIC.TimeBaseIP=TIM14
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=USB_ID
-PA10.Locked=true
-PA10.Signal=USB_OTG_FS_ID
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=USB_DM
-PA11.Locked=true
-PA11.Signal=USB_OTG_FS_DM
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=USB_DP
-PA12.Locked=true
-PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -152,14 +154,12 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=USB_SOF [TP1]
-PA8.Locked=true
-PA8.Signal=USB_OTG_FS_SOF
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=USB_VBUS
-PA9.Locked=true
-PA9.Signal=USB_OTG_FS_VBUS
+PA4.Mode=Half_Duplex_Slave
+PA4.Signal=I2S1_WS
+PA5.Mode=Half_Duplex_Slave
+PA5.Signal=I2S1_CK
+PA7.Mode=Half_Duplex_Slave
+PA7.Signal=I2S1_SD
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
@@ -168,14 +168,23 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=ST1
 PB11.Locked=true
 PB11.Signal=GPIO_Output
+PB13.Locked=true
+PB13.Mode=Half_Duplex_Slave
+PB13.Signal=I2S2_CK
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB15.Locked=true
+PB15.Mode=Half_Duplex_Slave
+PB15.Signal=I2S2_SD
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB4.Locked=true
+PB4.Mode=Half_Duplex_Slave
+PB4.Signal=I2S2_WS
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
@@ -195,14 +204,6 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PCC.Checker=false
-PCC.Line=STM32F7x2
-PCC.MCU=STM32F722Z(C-E)Tx
-PCC.PartNumber=STM32F722ZETx
-PCC.Seq0=0
-PCC.Series=STM32F7
-PCC.Temperature=25
-PCC.Vdd=3.3
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -217,14 +218,6 @@ PE0.GPIOParameters=GPIO_Label
 PE0.GPIO_Label=ST0
 PE0.Locked=true
 PE0.Signal=GPIO_Output
-PE3.Mode=SAI_B_SyncSlave
-PE3.Signal=SAI1_SD_B
-PE4.Mode=SAI_A_AsyncSlave
-PE4.Signal=SAI1_FS_A
-PE5.Mode=SAI_A_AsyncSlave
-PE5.Signal=SAI1_SCK_A
-PE6.Mode=SAI_A_AsyncSlave
-PE6.Signal=SAI1_SD_A
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -250,7 +243,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F722ZETx
-ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.15.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -261,13 +254,13 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=nucleo-f722-144-akashi02-talkthrough.ioc
-ProjectManager.ProjectName=nucleo-f722-144-akashi02-talkthrough
+ProjectManager.ProjectFileName=nucleo-f722-akashi02-i2s.ioc
+ProjectManager.ProjectName=nucleo-f722-akashi02-i2s
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -360,28 +353,12 @@ RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
-SAI1.AudioMode-SAI_B_SyncSlave=SAI_MODESLAVE_TX
-SAI1.BasicDataSize-SAI_A_AsyncSlave=SAI_PROTOCOL_DATASIZE_32BIT
-SAI1.BasicDataSize-SAI_B_SyncSlave=SAI_PROTOCOL_DATASIZE_32BIT
-SAI1.IPParameters=Instance-SAI_A_AsyncSlave,VirtualMode-SAI_A_AsyncSlave,InitProtocol-SAI_A_AsyncSlave,VirtualProtocol-SAI_A_BASIC,Instance-SAI_B_SyncSlave,VirtualMode-SAI_B_SyncSlave,InitProtocol-SAI_B_SyncSlave,VirtualProtocol-SAI_B_BASIC,BasicDataSize-SAI_A_AsyncSlave,BasicDataSize-SAI_B_SyncSlave,AudioMode-SAI_B_SyncSlave
-SAI1.InitProtocol-SAI_A_AsyncSlave=Enable
-SAI1.InitProtocol-SAI_B_SyncSlave=Enable
-SAI1.Instance-SAI_A_AsyncSlave=SAI$Index_Block_A
-SAI1.Instance-SAI_B_SyncSlave=SAI$Index_Block_B
-SAI1.VirtualMode-SAI_A_AsyncSlave=VM_SLAVE
-SAI1.VirtualMode-SAI_B_SyncSlave=VM_SLAVE
-SAI1.VirtualProtocol-SAI_A_BASIC=VM_BASIC_PROTOCOL
-SAI1.VirtualProtocol-SAI_B_BASIC=VM_BASIC_PROTOCOL
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
-VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC.Mode=SAI_A_BASIC
-VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC.Signal=SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-VP_SAI1_VP_$IpInstance_SAIB_SAI_BASIC.Mode=SAI_B_BASIC
-VP_SAI1_VP_$IpInstance_SAIB_SAI_BASIC.Signal=SAI1_VP_$IpInstance_SAIB_SAI_BASIC
 VP_SYS_VS_tim14.Mode=TIM14
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
 board=NUCLEO-F722ZE
