--- a/nucleo-g431-akashi04-i2s/nucleo-g431-akashi04-i2s.ioc
+++ b/nucleo-g431-akashi04-i2s/nucleo-g431-akashi04-i2s.ioc
@@ -115,12 +115,12 @@ Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PB12
-Mcu.Pin12=PB13
-Mcu.Pin13=PB15
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB15
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
 Mcu.Pin16=PC10
 Mcu.Pin17=PC12
 Mcu.Pin18=PB3
@@ -136,7 +136,7 @@ Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
-Mcu.Pin9=PA4
+Mcu.Pin9=PA5
 Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -176,6 +176,9 @@ PA14.GPIO_Label=T_SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Locked=true
+PA15.Mode=Half_Duplex_Slave
+PA15.Signal=I2S3_WS
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=LPUART1_TX [STLINKV3E_VCP_RX]
 PA2.Locked=true
@@ -186,8 +189,6 @@ PA3.GPIO_Label=LPUART1_RX [STLINKV3E_VCP_TX]
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=LPUART1_RX
-PA4.Mode=Half_Duplex_Slave
-PA4.Signal=I2S3_WS
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [green]
 PA5.Locked=true
@@ -202,9 +203,13 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB8-BOOT0.GPIOParameters=GPIO_Speed
+PB8-BOOT0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB8-BOOT0.Locked=true
 PB8-BOOT0.Mode=I2C
 PB8-BOOT0.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Speed
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
@@ -263,7 +268,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,7-MX_I2S3_Init-I2S3-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
